processed/gerrit/txt_full/46494.txt
Change:     46494
Subject:    LU-15420 snmp: avoid gcc-11 -Werror=sizeof-array-div warning
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/46494
Change-Id:  I5167044bb31b3b6f97223004298354917c6cc49c
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Jian Yu
Created:    2022-02-10 17:29:26.000000000
Updated:    2022-02-11 00:14:41.000000000
Patch Set:  1
Insertions: +1
Deletions:  -1
Comments:   0 (0 unresolved)

--- Reviewers ---
  REVIEWER: James Simmons

--- Commit Message ---
LU-15420 snmp: avoid gcc-11 -Werror=sizeof-array-div warning

This patch fixes the following warning:

lustre-snmp.c: In function 'deinit_lustresnmp':
lustre-snmp.c:715:64: error: expression does not compute
the number of elements in this array; element type is 'oid'
{aka 'long unsigned int'}, not 'oid[7]'
{aka 'long unsigned int[7]'} [-Werror=sizeof-array-div]
  715 |                        sizeof(clusterFileSystems_variables_oid)/
      |                                                                ^

lustre-snmp.c:715:64: note: add parentheses around the second
'sizeof' to silence this warning

Test-Parameters: trivial

Change-Id: I5167044bb31b3b6f97223004298354917c6cc49c
Signed-off-by: Jian Yu <yujian@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2022-02-10 17:29:26.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2022-02-10 17:29:29.000000000) ---
Patch Set 1:

Cannot detect any functional changes in this patch

--- Message (wc-checkpatch, 2022-02-10 17:29:43.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (James Simmons, 2022-02-10 17:42:54.000000000) ---
Patch Set 1: Code-Review-1

Patch https://review.whamcloud.com/#/c/46319/ contains this fixes as well as the changelog build issues.

--- Message (jenkins, 2022-02-10 18:19:35.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/86153/ : SUCCESS

--- Message (Maloo, 2022-02-10 18:20:27.000000000) ---
Patch Set 1:

The following sessions will be run for build 86153 patch 1

Enforced:
- review-ldiskfs-dne on el8.3-x86_64/ldiskfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=86153&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions?jobs=lustre-reviews&builds=86153&start_date=2022-02-10#redirect

--- Message (Jian Yu, 2022-02-10 19:01:59.000000000) ---
Abandoned

Thank you, James. Let me abandon this patch.

--- Message (Maloo, 2022-02-11 00:14:41.000000000) ---
Patch Set 1:

Passed enforced test review-ldiskfs-dne on CentOS 8.3/x86_64 uploaded by Trevis Autotest from trevis-85vm1: https://testing.whamcloud.com/test_sessions/876a7c66-076c-4259-85d0-42d74e096ab0 ran 5 tests.
